--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
